--- a/homepage.html
+++ b/homepage.html
@@ -31,7 +31,40 @@
             text-decoration: none;
         }
         section {
-            padding: 20px;
+            padding: 40px;
+            margin-top: 20px;
+            background-color: #f9f9f9;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        section h2 {
+            color: #333;
+            font-size: 28px;
+            margin-bottom: 20px;
+        }
+
+        section p {
+            font-size: 18px;
+            line-height: 1.6;
+            color: #666;
+            margin-bottom: 15px;
+        }
+
+        section p:last-child {
+            margin-bottom: 0;
+        }
+
+        section p::before {
+            content: '\2022'; 
+            color: #ffc107;
+            font-weight: bold;
+            margin-right: 10px;
+        }
+
+        section p:last-child::after {
+            content: ''; 
+        }
         }
         footer {
             background-color: #333;
