--- a/homepage.html
+++ b/homepage.html
@@ -92,10 +92,8 @@
     </header>
     <section>
         <h2>Tentang Saya</h2>
-        <p>Hai, Saya Aleeisandro Lasut</p>
-        <p>Saya seorang mahasiswa Teknik Informatika</p>
-        <p>Saya kelahiran Tahun 2005</p>
-        <P>Motto hidup saya adalah "sometimes you have to take a step back to move forward"</P>
+        <p class="animated-text">Hi, I'm Aleeisandro Lasut</p>
+        <p class="animated-text">I am an informatics student</p> 
     </section>
     <footer>
         <p>&copy; 2024 Aleeisandro Lasut</p>
