--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,54 @@
             bottom: 0;
             width: 100%;
         }
+        ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        li {
+            margin-bottom: 15px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #333;
+            transition: color 0.3s ease;
+        }
+
+        a:hover {
+            color: #007bff;
+        }
+        a .article-title {
+            font-weight: bold;
+        }
+        a .article-link {
+            color: #777;
+        }
+        ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        li {
+            margin-bottom: 15px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #333;
+            transition: color 0.3s ease;
+        }
+
+        a:hover {
+            color: #007bff;
+        }
+        a .article-title {
+            font-weight: bold;
+        }
+        a .article-link {
+            color: #777;
+        }
     </style>
 </head>
 <body>
