--- a/blog.html
+++ b/blog.html
@@ -106,9 +106,9 @@
     <section>
         <h2>Blog Posts</h2>
         <ul>
-            <li><a href="https://www.bolasport.com/read/314049070/usai-jitu-memprediksi-kemenangan-timnas-indonesia-di-leg-i-media-asing-sebut-vietnam-bakal-gagal-menang-di-kandang-sendiri">Artikel tentang Timnas Indonesia</a></li>
-            <li><a href="https://www.cnnindonesia.com/teknologi/20240205191559-185-1058994/fakta-fakta-apple-vision-pro-simak-kecanggihannya">Article tentang Apple Vision Pro</a></li>
-            <li><a href="https://www.cnnindonesia.com/hiburan/20240325132652-220-1078663/exhuma-jadi-film-kultus-pertama-tembus-10-juta-penonton-di-korea">Article tentang Film Exhuma</a></li>
+            <li><a href="https://www.bolasport.com/read/314049070/usai-jitu-memprediksi-kemenangan-timnas-indonesia-di-leg-i-media-asing-sebut-vietnam-bakal-gagal-menang-di-kandang-sendiri"><span class="article-title">Artikel tentang Timnas Indonesia</span><br><span class="article-link">www.bolasport.com</span></a></li>
+            <li><a href="https://www.cnnindonesia.com/teknologi/20240205191559-185-1058994/fakta-fakta-apple-vision-pro-simak-kecanggihannya"><span class="article-title">Article tentang Apple Vision Pro</span><br><span class="article-link">www.cnnindonesia.com</span></a></li>
+            <li><a href="https://www.cnnindonesia.com/hiburan/20240325132652-220-1078663/exhuma-jadi-film-kultus-pertama-tembus-10-juta-penonton-di-korea"><span class="article-title">Article tentang Film Exhuma</span><br><span class="article-link">www.cnnindonesia.com</span></a></li>
         </ul>
     </section>
     <footer>
